tests/integration/snapshots/integration__conformance__n_number_inf.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
[Inf]
stderr ---
error: unexpected character `I`. expected start of a json value
 --> stdin:1:2
  |
1 | [Inf]
  |  ^
